# sbirscout

./: AUDIT.md  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  SOURCES.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
demos/: topics.json
demos/01-ai-security-capability-match/: SCENARIO.md  topics.json
demos/01-basic/: SCENARIO.md  topics.json
demos/02-low-match-quiet-day/: SCENARIO.md  topics.json
demos/03-deadline-emergency/: SCENARIO.md  topics.json
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  DEPLOY.md  INSTALL.md
examples/: help.txt  sources.txt  version.txt
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
sbirscout/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_hardening.py  test_smoke.py
